--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 /Praktikum8/latihanMedium/build/
 /Praktikum8/tugas/nbproject/private/
 /Praktikum8/tugas/build/
+/Praktikum9/ArrayListTest/nbproject/private/
+/Praktikum9/ArrayListTest/build/
+/Praktikum9/MapTest/nbproject/private/
+/Praktikum9/MapTest/build/
+/Praktikum9/BangunDatarMain/nbproject/private/
+/Praktikum9/BangunDatarMain/build/
