--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /Praktikum9/MapTest/build/
 /Praktikum9/BangunDatarMain/nbproject/private/
 /Praktikum9/BangunDatarMain/build/
+/Praktikum9/AnabulCollection/nbproject/private/
+/Praktikum9/AnabulCollection/build/
