--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /Praktikum9/AnabulCollection/build/
 /Praktikum10/MainDAO/nbproject/private/
 /Praktikum10/MainDAO/build/
+/Praktikum10/Modularisasi/nbproject/private/
+/Praktikum10/Modularisasi/build/
