--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /Praktikum10/MainDAO/build/
 /Praktikum10/Modularisasi/nbproject/private/
 /Praktikum10/Modularisasi/build/
+/Praktikum10/CollectionBasisData/nbproject/private/
+/Praktikum10/CollectionBasisData/build/
