--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 /Praktikum10/Modularisasi/build/
 /Praktikum10/CollectionBasisData/nbproject/private/
 /Praktikum10/CollectionBasisData/build/
+/Praktikum11/Lambda/nbproject/private/
+/Praktikum11/Lambda/build/
